SERVER-20858 Reject creation of non-capped oplog collections.

(cherry picked from commit bee7144f59bc8782c3c8e76c45a9f9e0e39cb1e6)