src/mongo/db/catalog/database.cpp
@@ -487,6 +487,7 @@ Collection* Database::createCollection(OperationContext* txn,
 
     NamespaceString nss(ns);
     uassert(17316, "cannot create a blank collection", nss.coll() > 0);
+    uassert(28838, "cannot create a non-capped oplog collection", options.capped || !nss.isOplog());
 
     audit::logCreateCollection(currentClient.get(), ns);
 
